update html source to include content that is section-specific rather than template-general

--- a/Source/Custom Device/Help/HTML Help Source/Port.html
+++ b/Source/Custom Device/Help/HTML Help Source/Port.html
@@ -21,13 +21,11 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 			<hr width="100%" noshade>
 		</noscript>
 		<h1>Port</h1>
-		<h2>Subsection 1</h2>
-		Subsection 1 information</br>
-		
-		<h2>Subsection 2</h2>
-		Subsection 2 information</br>
-		<p>
-			<strong>Control:</strong> Description 
-		</p>
+		<p>Equivalent to the hardware channel. Each hardware channel is capable of bidirectional communication using the MIL-STD-1553 protocol.</p>
+		<p>This section has the following configuration settings:
+			<ul>
+				<li><strong>Name</strong>&#8212;Specifies the name of the hardware channel in the system definition.</li>
+				<li><strong>Description</strong>&#8212;Describes the channel to document connections.</li>
+				<li><strong>Channel Number</strong>&#8212;Returns the hardware channel number configured in the parameters configuration file.</li>
 	</body>
 </html> 
