--- a/Source/Custom Device/Help/HTML Help Source/Acyclic Frames.html
+++ b/Source/Custom Device/Help/HTML Help Source/Acyclic Frames.html
@@ -21,13 +21,12 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 			<hr width="100%" noshade>
 		</noscript>
 		<h1>Acyclic Frames</h1>
-		<h2>Subsection 1</h2>
-		Subsection 1 information</br>
-		
-		<h2>Subsection 2</h2>
-		Subsection 2 information</br>
-		<p>
-			<strong>Control:</strong> Description 
+		<p>Contains triggers for acyclic message buffers. Acyclic message buffers are not scheduled and will not be transmitted until triggered.</p>
+		<p>This section has the following configuration settings:
+			<ul>
+				<li><strong>Name</strong>&#8212;Specifies the name of the section in the system definition.</li>
+				<li><strong>Description</strong>&#8212;Describes the section.</li>
+			</ul>
 		</p>
 	</body>
 </html> 
