--- a/Source/Custom Device/Help/HTML Help Source/Receive Time.html
+++ b/Source/Custom Device/Help/HTML Help Source/Receive Time.html
@@ -25,7 +25,7 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 		<p>This channel has the following configuration settings:
 			<ul>
 				<li><strong>Name</strong>&#8212;Specifies the name of the channel in the system definition.</li>
-				<li><strong>Description</strong>&#8212;Describes the received time channel.</li>
+				<li><strong>Description</strong>&#8212;Describes this <strong>receive time</strong> channel.</li>
 		</p>
 	</body>
 </html>
