--- a/Source/Custom Device/Help/HTML Help Source/Trigger Channel.html
+++ b/Source/Custom Device/Help/HTML Help Source/Trigger Channel.html
@@ -21,7 +21,7 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 			<hr width="100%" noshade>
 		</noscript>
 		<h1>Trigger Channel</h1>
-		<p>Triggers the named acyclic buffer.</p>
+		<p>Triggers transmission of the named acyclic buffer.</p>
 		<p>This section has the following configuration settings:
 			<ul>
 				<li><strong>Name</strong>&#8212;Specifies the name of the section in the system definition.</li>
