--- a/Source/Custom Device/Help/HTML Help Source/Message.html
+++ b/Source/Custom Device/Help/HTML Help Source/Message.html
@@ -14,6 +14,15 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 		<script src="common.js" type="text/javascript"></script><script src="js/expandable_tree.js" type="text/javascript"></script>
 		<link rel="STYLESHEET" type="text/css" href="css/expandable_tree.css">
 		<script src="launchhelp.js" type="text/javascript"></script><script src="js/dynamicjumps.js" type="text/javascript"></script>
+		<style>
+		table, th, td {
+			border: 1px solid black;
+			border-collapse: collapse;
+		}
+		th, td {
+			padding: 8px;
+		}
+		</style>
 	</head>
 	<body>
 		<noscript>
@@ -21,7 +30,24 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 			<hr width="100%" noshade>
 		</noscript>
 		<h1>Message</h1>
-		<p>Identifies each MIL-STD-1553 message payload. Each message is composed of a number (0..32) of unsigned, 16-bit (U16) words.</p>
+		<p>Identifies each MIL-STD-1553 message payload. Each raw message is composed of a number of unsigned, 16-bit (U16) words. This custom device further supports the encoding of scaled parameters within a raw word or spanning multiple words.</p>
+		<table>
+	<tr>
+		<th>Message Type</th>
+		<th>Number of Words</th>
+  	</tr>
+	<tr>
+		<td>Data Message</td>
+		<td>1..31 U16 words encoding 1..N parameters</td>
+	</tr>
+		<tr>
+		<td>Mode Code</td>
+		<td>
+				<p>Mode Codes 0..15 have zero associated data words.</p>
+				<p>Mode Codes 16..31 each have one associated data word.</p>
+		</td>
+	</tr>
+		</table></br>
 		<p>This section has the following configuration settings:
 			<ul>
 				<li><strong>Name</strong>&#8212;Specifies the name of the section in the system definition.</li>
