added subaddress and Acyclic Buffer ID as these will be added to the respective pages shortly

--- a/Source/Custom Device/Help/HTML Help Source/Trigger Channel.html
+++ b/Source/Custom Device/Help/HTML Help Source/Trigger Channel.html
@@ -26,6 +26,7 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 			<ul>
 				<li><strong>Name</strong>&#8212;Specifies the name of the section in the system definition.</li>
 				<li><strong>Description</strong>&#8212;Describes the section.</li>
+				<li><strong>Acyclic Buffer ID</strong>&#8212;Specifies the identifying name of the acyclic message buffer to trigger.</li>
 			</ul>
 		</p>
 	</body>
