--- a/Source/Custom Device/Help/HTML Help Source/Subaddress.html
+++ b/Source/Custom Device/Help/HTML Help Source/Subaddress.html
@@ -26,6 +26,7 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 			<ul>
 				<li><strong>Name</strong>&#8212;Specifies the name of the section in the system definition.</li>
 				<li><strong>Description</strong>&#8212;Describes the section.</li>
+				<li><strong>Subaddress</strong>&#8212;Specifies the subaddress (0..31) on the remote terminal.</li>
 			</ul></p>
 		</p>
 	</body>
