Update html source to include section-specific content (#76)
* update html source to include content that is section-specific rather than template-general

--- a/Source/Custom Device/Help/HTML Help Source/Trigger Channel.html
+++ b/Source/Custom Device/Help/HTML Help Source/Trigger Channel.html
@@ -21,11 +21,12 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 			<hr width="100%" noshade>
 		</noscript>
 		<h1>Trigger Channel</h1>
-		<p>Triggers the named acyclic buffer.</p>
+		<p>Triggers transmission of the named acyclic buffer.</p>
 		<p>This section has the following configuration settings:
 			<ul>
 				<li><strong>Name</strong>&#8212;Specifies the name of the section in the system definition.</li>
 				<li><strong>Description</strong>&#8212;Describes the section.</li>
+				<li><strong>Acyclic Buffer ID</strong>&#8212;Specifies the identifying name of the acyclic message buffer to trigger.</li>
 			</ul>
 		</p>
 	</body>
