--- a/Source/Custom Device/Help/HTML Help Source/Protocol.html
+++ b/Source/Custom Device/Help/HTML Help Source/Protocol.html
@@ -21,13 +21,7 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 			<hr width="100%" noshade>
 		</noscript>
 		<h1>Protocol</h1>
-		<h2>Subsection 1</h2>
-		Subsection 1 information</br>
-		
-		<h2>Subsection 2</h2>
-		Subsection 2 information</br>
-		<p>
-			<strong>Control:</strong> Description 
-		</p>
+		<h2>MIL-STD-1553</h2>
+		<p>For more information on MIL-STD-1553, refer to the <a href="https://www.milstd1553.com/" target="_blank">MIL-STD-1553 online reference</a>.</p></br>
 	</body>
 </html> 
