--- a/Source/Custom Device/Help/HTML Help Source/Vendor.html
+++ b/Source/Custom Device/Help/HTML Help Source/Vendor.html
@@ -20,14 +20,8 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 			<p class="Body">JavaScript is disabled. <a href="veristandmerge.chm::/JavaScript_Disabled.html">Details</a></p>
 			<hr width="100%" noshade>
 		</noscript>
-		<h1>Vendor</h1>
-		<h2>Subsection 1</h2>
-		Subsection 1 information</br>
-		
-		<h2>Subsection 2</h2>
-		Subsection 2 information</br>
-		<p>
-			<strong>Control:</strong> Description 
-		</p>
+		<h1>Astronics Hardware with Ballard Technology</h1>
+		<h2>Supported Hardware</h2>
+		Supported hardware is keyed for use with LabVIEW and is available from <a href="https://www.ni.com/" target="_blank">ni.com</a>.</br>
 	</body>
 </html> 
