--- a/Source/Custom Device/Help/HTML Help Source/Error Count.html
+++ b/Source/Custom Device/Help/HTML Help Source/Error Count.html
@@ -9,7 +9,7 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 	<head>
 		<meta http-equiv="Content-Style-Type" content="text/css">
 		<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-		<title>Error Counter</title>
+		<title>Error Count</title>
 		<link rel="STYLESHEET" type="text/css" href="css/VSsystemexplorer.css">
 		<script src="common.js" type="text/javascript"></script><script src="js/expandable_tree.js" type="text/javascript"></script>
 		<link rel="STYLESHEET" type="text/css" href="css/expandable_tree.css">
@@ -20,7 +20,7 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 			<p class="Body">JavaScript is disabled. <a href="veristandmerge.chm::/JavaScript_Disabled.html">Details</a></p>
 			<hr width="100%" noshade>
 		</noscript>
-		<h1>Error Counter</h1>
+		<h1>Error Count</h1>
 		<p>Astronics Ballard MIL-STD 1553 hardware monitors errors for each incoming (Rx) record. Each error counter contains the cumulative count for that specific MIL-STD-1553 error.</p>
 		<p>This channel has the following configuration settings:
 			<ul>
