--- a/Source/Custom Device/Help/HTML Help Source/Terminal Status.html
+++ b/Source/Custom Device/Help/HTML Help Source/Terminal Status.html
@@ -9,19 +9,55 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 	<head>
 		<meta http-equiv="Content-Style-Type" content="text/css">
 		<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-		<title>Status Word</title>
+		<title>Terminal Status</title>
 		<link rel="STYLESHEET" type="text/css" href="css/VSsystemexplorer.css">
 		<script src="common.js" type="text/javascript"></script><script src="js/expandable_tree.js" type="text/javascript"></script>
 		<link rel="STYLESHEET" type="text/css" href="css/expandable_tree.css">
 		<script src="launchhelp.js" type="text/javascript"></script><script src="js/dynamicjumps.js" type="text/javascript"></script>
+		<style>
+		table, th, td {
+			border: 1px solid black;
+			border-collapse: collapse;
+		}
+		th, td {
+			padding: 8px;
+		}
+		</style>
 	</head>
 	<body>
 		<noscript>
 			<p class="Body">JavaScript is disabled. <a href="veristandmerge.chm::/JavaScript_Disabled.html">Details</a></p>
 			<hr width="100%" noshade>
 		</noscript>
-		<h1>Status Word</h1>
-		<p>A VeriStand channel equal to the value of the status word received along with the data words as sent by remote terminal message endpoint(s).</p>
+		<h1>Terminal Status</h1>
+		<p>A VeriStand channel updated by this custom device that indicates the status of the parent terminal. This table details the possible terminal status channel values for the bus controller and remote terminals: </p>
+		<table>
+	<tr>
+		<th>Bus Controller</th>
+		<th>Remote Terminal</th>
+	</tr>
+	<tr>
+		<td>0: Running</td>
+		<td>0: Running (Simulated)</td>
+	</tr>
+	<tr>
+		<td>1: Stopped</td>
+		<td>1: Running (Monitor)</td>
+	</tr>
+	<tr>
+		<td>2: Paused</td>
+		<td>2: Stopped</td>
+	</tr>
+	<tr>
+		<td>3: Not Configured</td>
+		<td>3: Paused</td>
+	</tr>
+	<tr>
+		<td></td>
+		<td>4: Not Configured</td>
+	</tr>
+		</table></br>
+
 		<p>You can perform the following actions with this channel:
 			<ul><li>View on a screen.</li>
 				<li>Assign an alias.</li>
