Create Rx/Tx folders for subaddresses

--- a/Source/Custom Device/Help/HTML Help Source/Configuration Files.html
+++ b/Source/Custom Device/Help/HTML Help Source/Configuration Files.html
@@ -57,6 +57,7 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 			<ul>
 				<li><strong>Hardware Configuration File Path</strong>&#8212;Specifies the path to the hardware configuration file.</li>
 				<li><strong>Parameters Configuration File Path</strong>&#8212;Specifies the path to the parameters configuration file.</li>
+				<li><strong>Create Tx/Rx Folders for Subaddresses?</strong>&#8212;If the checkbox is selected, subaddresses will be added under the direction (Rx/Tx) section. Use this option when two messages have the same terminal and sub addresses but differ by direction.</li>
 				<li><strong>Refresh</strong>&#8212;Invokes the <strong>Refresh</strong> dialog box. Use this dialog box to view changes to a configuration when importing a new parameters configuration file or when the parameters configuration file has changed on disk.</li>
 			</ul></p>
 	</body>
